...
     *
     */
    fun forgotPassword() {
        viewModelScope.launch {
            if (userRepo.resetPassword(email = email.value)) {
                Log.d("Auth-UI", "passwordResetMailSend:completed")
                errorMessage.value = "Eine Email zum zurücksetzen wurde gesendet"
            } else {
                errorMessage.value = "Versuche eine andere Email Adresse"
            }
        }
    }
}
...
