...
@ExperimentalMaterial3Api
@Composable
fun JoinedGroupsView(viewModel: JoinedGroupsViewModel) {
    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "JoinedGroupsView"
            },
            topBar = { TopBar(title = "Meine Lerngruppen", isTab = true) },
            bottomBar = {
                NavigationBar(
                    clickMiddle = { viewModel.navToSearchGroups() },
                    clickRight = { viewModel.navToProfile() })
...
